<resources>
    <string name="app_name">Symbian</string>

    <string name="CadastroUsuario_titulo">Cadastro de Usuário</string>
    <string name="CadastroUsuario_nome">Nome</string>
    <string name="CadastroUsuario_sobrenome">Sobrenome</string>
    <string name="CadastroUsuario_login">Login</string>
    <string name="CadastroUsuario_senha">Senha</string>

    <string name="CadastroUsuario_buttonCadastrar">Cadastrar Usuário</string>
    <string name="CadastroUsuario_mensagem">Você está cadastrando o usuário</string>
    <string name="CadastroUsuario_insercao">Cadastro realizado com sucesso!</string>
    <string name="CadastroUsuario_insercaoErro">Houve um erro ao realizar o cadastro de usuário!</string>
    <string name="CadastroUsuario_cancelarInsercao">Cancelar</string>


    <string name="CadastroEndereco_cep">Código Postal</string>
    <string name="CadastroEndereco_titulo">Cadastro de Endereço</string>
    <string name="CadastroEndereco_numero">Número</string>
    <string name="CadastroEndereco_complemento">Complemento</string>
    <string name="CadastroEndereco_buttonCadastrar">Cadastrar Endereço</string>
    <string name="CadastroEndereco_insercao">Você está cadastrando o endereço</string>

    <string name="salvar">Salvar</string>
    <string name="LoginUsuario_titulo">Login</string>
    <string name="LoginUsuario_login">Login</string>
    <string name="LoginUsuario_senha">Senha</string>
    <string name="LoginUsuario_buttonLogar">Entrar</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos!</string>
    <string name="LoginUsuario_mensagem">Você está logando em um usuário!</string>
    <string name="LoginUsuario_logar">Entrar</string>

</resources>