<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity_cadastro_usuario">

        <TextView
            style="@style/CadastroUsuario_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CadastroUsuario_titulo" />

        <EditText
            android:id="@+id/txtNomeUsuarioCadastro"
            style="@style/CadastroUsuario_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CadastroUsuario_nome"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtSobrenomeUsuarioCadastro"
            style="@style/CadastroUsuario_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CadastroUsuario_sobrenome"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtLoginUsuarioCadastro"
            style="@style/CadastroUsuario_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CadastroUsuario_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtSobrenome"
            style="@style/CadastroUsuario_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CadastroUsuario_senha"
            android:inputType="text" />

    </LinearLayout>

</ScrollView>