<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroEndereco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".CadastroEndereco">

        <TextView
            style="@style/CadastroEndereco_titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CadastroEndereco_titulo" />


        <EditText
            android:id="@+id/txtCEPEnderecoCadastro"
            style="@style/CadastroEndereco_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/CadastroEndereco_cep"
            android:inputType="text" />


        <EditText
            android:id="@+id/txtNumeroEnderecoCadastro"
            style="@style/CadastroEndereco_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/CadastroEndereco_numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtComplementoEnderecoCadastro"
            style="@style/CadastroEndereco_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CadastroEndereco_complemento"
            android:inputType="text" />

    </LinearLayout>

</ScrollView>